--- a/interface/jade/mixins.jade
+++ b/interface/jade/mixins.jade
@@ -90,7 +90,7 @@
 mixin film_thumb(item)
     .col-md-3.col-sm-4.col-xs-6.film-thumb(data-mi-id="id",data-mi-val=item.id)
             - year = item.releasedate?item.releasedate.substr(0,4):""
-            - url = "/film/" + item.id + "/"
+            - url = "/films/" + item.id + "/"
             - has_free = false
             - min_price = false
             - price_loc = ""
