--- a/templates/vk_feed.html
+++ b/templates/vk_feed.html
@@ -2,22 +2,22 @@
         {% block feeditems %}
             {% for film, actors, directors, poster, trailer, scriptwriter, cost in films %}
                 <item>
-                  <title>{{film.name}}</title>
-                  <link>{{ trailer }} </link>
+                  <title>{{ film.name }}</title>
+                  <link>{{ trailer }}</link>
                   <enclosure url="{{ poster }}" type="image/jpeg"/>
-                  <description><![CDATA[Новинка в кинотеатре "Все видео": Фильм "{{ film.name }}"({{ film.name_orig }}, год: {{film.release_date.year}})
-                      Сводный рейтинг: {{ film.rating_cons}}/10
-                      Смотреть: http://vsevi.ru/film/{{film.id}}
-                      Стоимость:{{ cost }}
-                      В ролях: {{ actors }}
-                      Жанр: {% for ganre in film.genres.all %}#{{ganre.name}} {% endfor %}
-                      Режиссер: {{ directors }}
-                     {{film.description}} http://vsevi.ru/film/{{film.id}}]]>
+                  <description><![CDATA[Новинка в кинотеатре "Все видео": Фильм "{{ film.name }}"({% if film.name_orig %}{{ film.name_orig }}, {% endif %}год: {{film.release_date.year}})<br />
+                      Сводный рейтинг: {{ film.rating_cons }}/10<br />
+                      Смотреть: http://vsevi.ru/film/{{ film.id }}<br />
+                      Стоимость: {{ cost }}<br />
+                      В ролях: {{ actors }}<br />
+                      Жанр: {% for ganre in film.genres.all %}#{{ ganre.name }} {% endfor %}<br />
+                      Режиссер: {{ directors }}<br />
+                     {{film.description}} http://vsevi.ru/film/{{film.id}}/]]>
                   </description>
                   <pubDate>
-                    {{date }}
+                    {{ date }}
                   </pubDate>
-                  <guid>http://vsevi.ru/film/{{film.id}}</guid>
+                  <guid>http://vsevi.ru/film/{{ film.id }}</guid>
                 </item>
             {% endfor %}
         {% endblock %}
