--- a/templates/vk_feed.html
+++ b/templates/vk_feed.html
@@ -7,12 +7,12 @@
       <link>{{ trailer }}</link>
       <enclosure url="{{ poster }}" type="image/jpeg"/>
       <description><![CDATA[Новинка в кинотеатре "Все видео": Фильм "{{ film.name }}"({% if film.name_orig %}{{ film.name_orig }}, {% endif %}год: {{film.release_date.year}})<br />
-          Сводный рейтинг: {{ film.rating_cons }}/10/<br />
+          Сводный рейтинг: {{ film.rating_cons }}/10<br />
           Смотреть: http://vsevi.ru/film/{{ film.id }}/<br />
           Стоимость: {{ cost }}<br />
-          В ролях: {{ actors }}<br />
+          {% if actors %}В ролях: {{ actors }}<br />{% endif %}
           Жанр: {% for ganre in film.genres.all %}#{{ ganre.name }} {% endfor %}<br />
-          Режиссер: {{ directors }}<br />
+          {% if directors %}Режиссер: {{ directors }}<br />{% endif %}
          {{ film.description }} http://vsevi.ru/film/{{ film.id }}/]]>
       </description>
       <pubDate>
