--- a/templates/vk_feed.html
+++ b/templates/vk_feed.html
@@ -5,20 +5,18 @@
     <item>
       <title>{{ film.name }}</title>
       <link>{{ trailer }}</link>
-      <enclosure url="{{ poster }}" type="image/jpeg"/>
-      <description><![CDATA[Новинка в кинотеатре "Все видео": Фильм "{{ film.name }}"({% if film.name_orig %}{{ film.name_orig }}, {% endif %}год: {{film.release_date.year}})<br />
-          Сводный рейтинг: {{ film.rating_cons }}/10<br />
-          Смотреть: http://vsevi.ru/film/{{ film.id }}/<br />
-          Стоимость: {{ cost }}<br />
-          {% if actors %}В ролях: {{ actors }}<br />{% endif %}
-          Жанр: {% for ganre in film.genres.all %}#{{ ganre.name }} {% endfor %}<br />
-          {% if directors %}Режиссер: {{ directors }}<br />{% endif %}
-         {{ film.description }} http://vsevi.ru/film/{{ film.id }}/]]>
+      <description><![CDATA[Новинка в кинотеатре "Все видео": Фильм "{{ film.name }}" ({% if film.name_orig %}{{ film.name_orig }}, {% endif %}год: {{film.release_date.year}})<br />
+        Сводный рейтинг: {{ film.rating_cons }}/10<br />
+        Смотреть: http://vsevi.ru/films/{{ film.id }}/<br />
+        Стоимость: {{ cost }}<br />
+        {% if actors %}В ролях: {{ actors }}<br />{% endif %}
+        Жанр:{% for ganre in film.genres.all %} #{{ ganre.name }}{% endfor %}<br />
+        {% if directors %}Режиссер: {{ directors }}<br />{% endif %}
+{#        <img align=right src={{ poster }}>/>#}
+        {{ film.description }} http://vsevi.ru/films/{{ film.id }}/]]>
       </description>
-      <pubDate>
-        {{ date }}
-      </pubDate>
-      <guid>http://vsevi.ru/film/{{ film.id }}/</guid>
+      <pubDate>{{ date }}</pubDate>
+      <guid>{{ film.id }}</guid>
     </item>
   {% endfor %}
 {% endblock %}
