--- a/templates/tw_feed.html
+++ b/templates/tw_feed.html
@@ -1,13 +1,13 @@
 {% extends "base_feed.html" %}
 
 {% block feeditems %}
-  {% for fname,fid, message in messages %}
+  {% for fname, fid, message in messages %}
     <item>
       <title>{{ fname }}</title>
       <link>http://vsevi.ru/films/{{ fid }}/</link>
       <description><![CDATA[{{ message }}]]></description>
       <pubDate>{{ date }}</pubDate>
-      <guid>{{ film.id }}</guid>
+      <guid>{{ fid }}</guid>
     </item>
   {% endfor %}
 {% endblock %}
