--- a/templates/base_feed.html
+++ b/templates/base_feed.html
@@ -1,3 +1,4 @@
+{% spaceless %}
 <?xml version="1.0" encoding="UTF-8"?>
 <rss version="2.0">
   <channel>
@@ -13,3 +14,4 @@
     {% block feeditems %}{% endblock %}
   </channel>
 </rss>
+{% endspaceless %}
