--- a/templates/feed.html
+++ b/templates/feed.html
@@ -5,13 +5,14 @@
     <item>
       <title>{{ film.name }}</title>
       <link>http://vsevi.ru/films/{{ film.id }}/</link>
-      <enclosure url="{{ poster }}" type="image/jpeg"/>
       <description>
-        <![CDATA[Сводный рейтинг: {{ film.rating_cons }}/10<br />
+        <![CDATA[
+      {#        <img align=right src={{ poster }}>/>#}
+        Сводный рейтинг: {{ film.rating_cons }}/10<br />
         {% if actors %}В ролях: {{ actors }}<br />{% endif %}
         {% if directors %}Режиссер: {{ directors }}<br />{% endif %}
         {% if scriptwriter %}Сценарист: {{ scriptwriter }}<br />{% endif %}
-        {% if genres|length %}Жанр: {{ genres|join:", " }}<br />{% endif %}
+        {% if genres|length %}Жанр: {{ genres|join:', ' }}<br />{% endif %}
         Стоимость: {{ cost }}<br />
         {{ film.description }}]]>
       </description>
