--- a/templates/tw_feed.html
+++ b/templates/tw_feed.html
@@ -1,13 +1,17 @@
 {% extends "base_feed.html" %}
 
+{% spaceless %}
 {% block feeditems %}
-  {% for fname, fid, message in messages %}
-    <item>
-      <title>{{ fname }}</title>
-      <link>http://vsevi.ru/films/{{ fid }}/</link>
-      <description><![CDATA[{{ message }}]]></description>
-      <pubDate>{{ date }}</pubDate>
-      <guid>{{ fid }}</guid>
-    </item>
-  {% endfor %}
+
+{% for fname, fid, message in messages %}
+<item>
+  <title>{{ fname }}</title>
+  <link>http://vsevi.ru/films/{{ fid }}/</link>
+  <description><![CDATA[{{ message }}]]></description>
+  <pubDate>{{ date }}</pubDate>
+  <guid>{{ fid }}</guid>
+</item>
+{% endfor %}
+
 {% endblock %}
+{% endspaceless %}
