--- a/templates/fb_feed.html
+++ b/templates/fb_feed.html
@@ -1,11 +1,11 @@
 {% extends "base_feed.html" %}
 
 {% block feeditems %}
-{% for film, actors, directors, poster, trailer, scriptwriter, cost, genres in films %}
+{% for film, actors, directors, poster, trailer, scriptwriters, cost, genres in films %}
 <item>
   <title>{{ film.name }}</title>
   <link>http://vsevi.ru/films/{{ film.id }}/</link>
-  <enclosure url="{{ poster }}" type="image/jpeg"/>
+  <enclosure url="{{ poster }}" type="image/jpeg" />
   <description><![CDATA[Новинка в кинотеатре "Все видео": Фильм "{{ film.name }}" ({% if film.name_orig %}{{ film.name_orig }}, {% endif %}год: {{film.release_date.year}})<br />
     Сводный рейтинг: {{ film.rating_cons}}/10<br />
     Смотреть: http://vsevi.ru/films/{{ film.id }}/<br />
@@ -13,7 +13,7 @@
     {% if actors %}В ролях: {{ actors }}<br />{% endif %}
     {% if genres|length %}Жанр: #{{ genres|join:" #" }}<br />{% endif %}
     {% if directors %}Режиссер: {{ directors }}<br />{% endif %}
-    {% if scriptwriter %}Сценарист: {{ scriptwriter }}<br />{% endif %}
+    {% if scriptwriters %}Сценарист: {{ scriptwriters }}<br />{% endif %}
     {{film.description}} http://vsevi.ru/films/{{ film.id }}]]>
   </description>
   <pubDate>{{ date }}</pubDate>
