--- a/templates/fb_feed.html
+++ b/templates/fb_feed.html
@@ -4,7 +4,7 @@
 {% for film, actors, directors, poster, trailer, scriptwriters, cost, genres in films %}
 <item>
   <title>{{ film.name }} ({{ film.release_date.year }})</title>
-  <link>{{ trailer }}/</link>
+  <link>{{ trailer }}</link>
   <enclosure url="{{ poster }}" type="image/jpeg" />
   <description><![CDATA[Новинка в кинотеатре "Все видео": Фильм "{{ film.name }}" ({% if film.name_orig %}{{ film.name_orig }}, {% endif %}год: {{film.release_date.year}})<br />
     Сводный рейтинг: {{ film.rating_cons }}/10
