--- a/interface/jade/footer.jade
+++ b/interface/jade/footer.jade
@@ -37,7 +37,7 @@ footer(role='contentinfo')
            .bottom-footer
         //-
            .wrap-page
-#reg-enter.modal.fade(tabindex='-1', role='dialog', area-hidden='true')
+#reg_enter.modal.fade(tabindex='-1', role='dialog', area-hidden='true')
     .modal-dialog
         .modal-content
             button.close.modal-close(type='button', data-dismiss='modal', aria-hidden='true') ×
