--- a/interface/jade/head.jade
+++ b/interface/jade/head.jade
@@ -17,4 +17,5 @@ head
     link(href=css_url + 'custom.css', rel='stylesheet')
     link(href=css_url + 'rateit.css', rel='stylesheet')
     link(href=css_url + 'uniform.default.min.css', rel='stylesheet')
-    link(rel="icon",type="image/png",href="/favicon.png")
+    link(rel="icon",type="image/png",href="/favicon.ico")
+    link(href="/rss/feed", rel="alternate", title="RSS", type="application/rss+xml")
