--- a/interface/jade/page_index.jade
+++ b/interface/jade/page_index.jade
@@ -2,10 +2,9 @@ doctype html
 html
     - is_main = true
     - filter_year_old = {0: "все фильмы", 1: "этого года", 3: "самые свежие", 8: "свежие", 15: "новые", 20: "не старые"}
-    - filter_price = [[0, "бесплатно"], [50, "до 50 рублей"], [100, "до 100 рублей"], [200, "до 200 рублей"], [9999, "любая стоимость"]]
+    - filter_price = [["|", "любой стоимости"], ["|1", "в наличии"], ["0|1", "бесплатно"], ["50|1", "до 50 рублей"], ["100|1", "до 100 рублей"], ["200|1", "до 200 рублей"]]
     - filter_rating = [[0, "любой рейтинг"], [5, "включая плохие"], [6, "неплохие"], [6.5, "хорошие"], [7, "отличные"], [8, "самые лучшие"]]
-    - filter_sort = {"rating": "по рейтингу", "subscribes": "по подписчикам"}
-    - filter_instock = [[0, "в наличии и нет"],[1, "только в наличии"]]
+    - filter_sort = {"rating": "по рейтингу", "subscribes": "по подписчикам", "popular": "по популярности"}
     include config
     include mixins
     include head
@@ -37,14 +36,6 @@ html
                                                         li
                                                             - url_tmp = "?year_old=" + i
                                                             a(href=url_tmp, title='',data-mi-id=i)=item
-                                            li#filter_instock
-                                                a.sprite.sprite-i-toggle-bottom(href='#', data-toggle='dropdown', title='')
-                                                    span=filter_instock[0][1]
-                                                ul.dropdown-menu
-                                                    each item in filter_instock
-                                                        li
-                                                            - url_tmp = "?instock=" + item[0]
-                                                            a(href=url_tmp, title='',data-mi-id=i)=item[1]
                                             li#filter_price
                                                 - url_tmp = '?price=' + filter_price[0][0]
                                                 a.sprite.sprite-i-toggle-bottom(href=url_tmp, data-toggle='dropdown', title='')
@@ -53,7 +44,7 @@ html
                                                     each item in filter_price
                                                         li
                                                             - url_tmp = "?price=" + item[0]
-                                                            a(href=url_tmp, title='',data-mi-id=i)=item[1]
+                                                            a(href=url_tmp, title='',data-mi-id=item[0])=item[1]
                                             li#filter_genres
                                                 a.sprite.sprite-i-toggle-bottom(href='#', data-toggle='dropdown', title='')
                                                     span все жанры
@@ -71,7 +62,7 @@ html
                                                     each item in filter_rating
                                                         li
                                                             - url_tmp = "?rating=" + item[0]
-                                                            a(href=url_tmp, title='',data-mi-id=i)=item[1]
+                                                            a(href=url_tmp, title='',data-mi-id=item[0])=item[1]
 
 
                                     .col-md-3
