--- a/interface/jade/page_person.jade
+++ b/interface/jade/page_person.jade
@@ -24,7 +24,7 @@ html
                                 .col-md-3.col-sm-4.col-xs-12
                                     .person-img-full
                                         .img-person
-                                            - url_tmp = person.photo || noperson_url
+                                            - url_tmp = person.photo || nophoto_url
                                             img(src=url_tmp, alt='')
                                             br
                                             img(src=img_url + 'shd-small.png', alt='')
